add email verfication ft
